--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 #quiz {
-  width: 800px;
+  width: 1000px;
   max-width: 80%;
   background-color: white;
   border-radius: 20px;
@@ -37,6 +37,7 @@ body {
 #choices {
   display: grid;
   grid-template-columns: repeat(2, auto);
+  width: 100%;
   gap: 10px;
   margin: 20px 0;
   justify-content: center;
@@ -45,19 +46,29 @@ body {
 
 .choice {
   display: inline-block;
-  width: 135px;
+  width: 400px;
   text-align: center;
   border: 1px solid grey;
   border-radius: 5px;
   cursor: pointer;
   padding: 5px;
+  background-color: blueviolet;
 }
 .choice:hover {
   border: 1px solid rgb(15, 15, 15);
+  background-color: purple;
+  color: white;
 }
 
 #scoreContainer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.process {
+  width: 400px;
+  height: 20px;
+  border: 1px solid black;
+  background-color: green;
 }
